Remove static and fix main links

--- a/knowledge_base/main/templates/main/index.html
+++ b/knowledge_base/main/templates/main/index.html
@@ -9,10 +9,10 @@
     <p>Here you will find information including:</p>
     <ol>
       <li><a href="./happiness">Happiness Entries</a></li>
-      <li><a href="./happiness">Habits</a></li>
-      <li><a href="./happiness">Stitching Stuff</a></li>
-      <li><a href="./happiness">Alcohol</a></li>
+      <li><a href="./habits">Habits</a></li>
+      <li><a href="./stitching">Stitching Stuff</a></li>
+      <li><a href="./alcohol">Alcohol</a></li>
     </ol>
-
+    <p><b>Don't let the perfect be the enemy of the good -- Voltaire</b></p>
 </body>
 </html>
